--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,11 +9,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Setup elixir
-        uses: actions/setup-elixir@v1
+      - uses: erlef/setup-beam@v1
         with:
-          elixir-version: 1.14.1
-          otp-version: 25.1.1
+          otp-version: '25.1.1'
+          elixir-version: '1.14.1'
 
       - name: Install Dependencies
         run: mix deps.get
